force-app/main/default/objects/Quote_Indicators_Sync__c/Quote_Indicators_Sync__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains list of indicator fields that should be sync from quote to customer account</description>
    <label>Quote Indicators Sync</label>
</CustomObject>