force-app/main/default/objects/Quote_Indicators_Sync__c/fields/Customer_Account_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_API_Name__c</fullName>
    <label>Customer Account API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>