force-app/main/default/objects/Quote_Indicators_Sync__c/fields/Pricing_Contract_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract_API_Name__c</fullName>
    <label>Pricing Contract API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>