force-app/main/default/objects/Quote_Indicators_Sync__c/fields/Quote_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_API_Name__c</fullName>
    <label>Quote API Name</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>